--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fontsource/inter": "4.5.2",
     "@mailchimp/mailchimp_marketing": "^3.0.58",
+    "@prisma/client": "^4.3.1",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
@@ -27,6 +28,8 @@
     "nprogress": "^0.2.0",
     "postcss": "^8.4.5",
     "preact": "^10.6.2",
+    "prisma": "^4.3.1",
+    "querystring": "^0.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "1.3.0",
@@ -40,6 +43,7 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "sharp": "^0.28.3",
+    "swr": "^1.3.0",
     "tailwindcss": "^3.0.23",
     "unist-util-visit": "^4.0.0"
   },
