--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
     "mdx-bundler": "^8.0.0",
+    "motion": "^10.14.2",
     "next": "12.1.4",
     "next-themes": "^0.0.14",
     "nprogress": "^0.2.0",
@@ -45,7 +46,9 @@
     "sharp": "^0.28.3",
     "swr": "^1.3.0",
     "tailwindcss": "^3.0.23",
-    "unist-util-visit": "^4.0.0"
+    "typed.js": "^2.0.12",
+    "unist-util-visit": "^4.0.0",
+    "vanilla-tilt": "^1.7.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.1.4",
