--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "motion": "^10.14.2",
     "next": "12.1.4",
     "next-auth": "^4.10.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.0.14",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.5",
