--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,5 +18,6 @@
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "start_url": "/?source=pwa",
-  "display": "standalone"
+  "display": "standalone",
+  "scope": "/"
 }
