--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mailchimp/mailchimp_marketing": "^3.0.58",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
+    "@sanity/image-url": "^1.0.1",
+    "@sanity/webhook": "^2.0.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.5",
@@ -29,6 +31,7 @@
     "next": "12.1.4",
     "next-auth": "^4.10.3",
     "next-pwa": "^5.6.0",
+    "next-sanity": "^0.8.4",
     "next-themes": "^0.0.14",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.5",
@@ -47,6 +50,7 @@
     "remark-footnotes": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "sanity": "^2.33.2",
     "sharp": "^0.31.0",
     "swr": "^1.3.0",
     "tailwindcss": "^3.0.23",
