--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
+    "kbar": "^0.1.0-beta.36",
     "mdx-bundler": "^8.0.0",
     "motion": "^10.14.2",
     "next": "12.1.4",
@@ -52,6 +53,7 @@
     "remark-math": "^5.1.1",
     "sanity": "^2.33.2",
     "sharp": "^0.31.0",
+    "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "tailwindcss": "^3.0.23",
     "typed.js": "^2.0.12",
