--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fontsource/inter": "4.5.2",
+    "@icons-pack/react-simple-icons": "^5.6.0",
     "@mailchimp/mailchimp_marketing": "^3.0.58",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
