--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-pwa": "^5.6.0",
     "next-sanity": "^0.8.4",
     "next-themes": "^0.0.14",
+    "next-translate": "^1.6.0",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.5",
     "preact": "^10.6.2",
