--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "next": "12.1.4",
     "next-auth": "^4.10.3",
     "next-pwa": "^5.6.0",
-    "next-sanity": "^0.8.4",
     "next-themes": "^0.0.14",
     "next-translate": "^1.6.0",
     "nprogress": "^0.2.0",
@@ -60,8 +59,7 @@
     "swr": "^1.3.0",
     "tailwindcss": "^3.0.23",
     "typed.js": "^2.0.12",
-    "unist-util-visit": "^4.0.0",
-    "vanilla-tilt": "^1.7.2"
+    "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
     "@hint/configuration-web-recommended": "^8.2.15",
